# state-machine

./: .bazelrc  .bazelrc.ci  .clang-format  .clang-tidy  .gitignore  .travis.yml  BUILD.bazel  CMakeLists.txt  LICENSE.md  README.md  WORKSPACE  configure.bzl  configure_copts.bzl  variables.bzl.tpl
.github/workflows/: main.yml
examples/: BUILD.bazel  CMakeLists.txt  main.cc  visit.cc
examples/simple1/: main.cc
examples/simple2/: main.cc
include/: state_machine.h
include/state_machine/: backport.h  containers.h  optional.h  state_machine.h  traits.h  transition.h  transition_row.h  transition_table.h  variant.h  variant2.h
include/state_machine/containers/: basic.h  mapping.h  operations.h
include/state_machine/transition/: transition.h  transition_row.h  transition_table.h
lint/: BUILD.bazel  dummy.sh  macros.bzl
tests/: BUILD.bazel  CMakeLists.txt  failure_bijection_duplicate_values.cc  failure_surjection_duplicate_keys.cc  failure_surjection_entries_not_pairs.cc  macros.bzl  test_backport.cc  test_containers.cc  test_nothing.cc  test_state_machine.cc  test_traits.cc  test_transition.cc  test_transition_row.cc  test_transition_table.cc  test_variant.cc
toolchain/: BUILD  cc_toolchain_config.bzl  variables.bzl
