load("@generated_compiler_config//:variables.bzl", "STATE_MACHINE_DEFAULT_COPTS")

cc_library(
    name = "state_machine",
    textual_hdrs = glob(["include/**/*.h"]),
    copts = STATE_MACHINE_DEFAULT_COPTS,
    visibility = [
        "//examples:__pkg__",
        "//tests:__pkg__"
    ],
)

load("@com_grail_compdb//:aspects.bzl", "compilation_database")

compilation_database(
    name = "state_machine_compdb",
    targets = [
        "//:state_machine",
    ],
)
