load("@local_config//:variables.bzl", "STATE_MACHINE_DEFAULT_COPTS")

cc_library(
    name = "state_machine",
    textual_hdrs = glob(["include/**/*.h"]),
    copts = STATE_MACHINE_DEFAULT_COPTS,
    visibility = [
        "//examples:__pkg__",
        "//tests:__pkg__"
    ],
)

exports_files([".clang-tidy"], visibility=["//:__subpackages__"])
